--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,7 @@ h2 {
   flex-wrap: wrap;
   cursor: pointer;
   border-radius: 20px;
+  background-color: 	#D3D3D3;
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -51,11 +52,11 @@ h2 {
   width: 100%;
   justify-content: center;
   padding: 2rem;
-  background-color: #fafafa;
+  background-color: 	#D3D3D3;
 }
 
 .weatherLocation button{
-  background: #080705;
+  background: rgb(21, 74, 189);
   color:#fff;
   border: 1px solid transparent;
 }
@@ -68,7 +69,7 @@ h2 {
   height: 60%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  background: #FAFAFA;
+  background: #D3D3D3;
   font-family: weathericons;
   display: flex;
   align-items: center;
@@ -85,7 +86,7 @@ h2 {
   border-bottom-left-radius: 20px;
   display: flex;
   align-items: center;
-  color: white;
+  color: #D3D3D3;
 }
 .widget .weatherInfo .temperature {
   flex: 0 0 40%;
